删除部分内容

--- a/report/papers/paper-aqi-gamm.Rmd
+++ b/report/papers/paper-aqi-gamm.Rmd
@@ -55,17 +55,17 @@ Sys.setlocale("LC_ALL", "Chinese")
 - [ ] 半参数可加混合模型简介
 - [ ] 两个汇总系数表中模型I，II，III，IV 对应的具体模型
 - [ ] 两个汇总系数表下面注明显著性符号
-# 摘要
 
-本文以2014-2017年中国重点监测的35个城市的年度和月度空气质量指数为研究对象，利用半参数
-混合效应模型对城市空气质量的影响因素进行研究。该模型综合考虑了自变量对因变量的线性和非
-线性固定效应以及描述观测值数据相关性的随机效应。研究结果显示，对于年均AQI，社会经济因素
-中的废气治理完成投资额是正的线性影响，固定资产投资和汽车拥有量是非线性关系；气候因素中
-的平均风速是线性关系，平均气温具有非线性关系;是否临海，是否供暖和纬度三个地理
-因素对年均AQI有线性影响。对于月均AQI，社会经济方面的三个影响因素废气治理完成投资额，房屋建
-筑施工面积和汽车拥有量均为线性影响；平均气温，降水量，平均风速和平均气
-压这四个气象变量对月均AQI均有显著的线性影响；地理因素中的是否临海，是否供暖是线性影响，
-纬度对月均AQI有显著的非线性影响。
+
+**摘要:** 本文以2014-2017年中国重点监测的35个城市的年度和月度空气质量指数为研究
+对象，利用半参数混合效应模型对城市空气质量的影响因素进行研究。该模型综合考虑了自
+变量对因变量的线性和非线性固定效应以及描述观测值数据相关性的随机效应。研究结果显
+示，对于年均AQI，社会经济因素中的废气治理完成投资额是正的线性影响，固定资产投资
+和汽车拥有量是非线性关系；气候因素中的平均风速是线性关系，平均气温具有非线性关系;是
+否临海，是否供暖和纬度三个地理因素对年均AQI有线性影响。对于月均AQI，社会经济方面
+的三个影响因素废气治理完成投资额，房屋建筑施工面积和汽车拥有量均为线性影响；平均
+气温，降水量，平均风速和平均气压这四个气象变量对月均AQI均有显著的线性影响；地理
+因素中的是否临海，是否供暖是线性影响，纬度对月均AQI有显著的非线性影响。
 
 # 简介
 
@@ -100,7 +100,7 @@ Zheng,2017,李健、靳泽凡、苑清敏，2019）[@zanin2012assessing;@zheng20
 和月度平均对数AQI为因变量建立半参数混合效应模型进行相应研究，为空气质量状况研究
 提供新的研究方法，并完善空气质量状况的研究体系。
 
-**半参数混合效应模型简介**
+<!-- **半参数混合效应模型简介** -->
 
 在实际建模过程中自变量与因变量的关系并不都是非线性关系，最具灵活性的模型应是在同
 一个模型中既包含参数项又包含非参数项，模型的参数部分还允许像哑变量或定序变量的离散
@@ -115,11 +115,11 @@ $$y_{i}=\boldsymbol{X_{i}\beta} + f_{1}(x_{1i}) + f_{2}(x_{2i})
   + \cdots + \boldsymbol{Z_{i}b} + \varepsilon_{i}$${#eq:additive-mixed}
   
 其中 $y_{i}$ 是因变量， $\boldsymbol{\beta}$ 是固定效应参数向量，
- $\boldsymbol{X_{i}}$ 是固定
-效应设计矩阵， $f_{j}$ 是自变量 $x_{k}$ 的光滑函数， $\boldsymbol{Z_{i}}$ 是随机效应
-的设计矩阵， $\boldsymbol{b \sim \mathcal{N} (0, \Psi)}$ 是随机效应变量，其中方差
-协方差阵 $\boldsymbol{\Psi}$ 一般未知而需要估计， $\boldsymbol{\varepsilon \sim \mathcal{N}(0,\Lambda)}$ 是误差向量，其由 $\varepsilon_{i}$ 堆积而成，一般假设其方差
-协方差矩阵具有比较简单的形式。
+ $\boldsymbol{X_{i}}$ 是固定效应设计矩阵， $f_{j}$ 是自变量 $x_{k}$ 的光滑函数，
+ $\boldsymbol{Z_{i}}$ 是随机效应的设计矩阵， $\boldsymbol{b \sim \mathcal{N} (0,
+ \Psi)}$ 是随机效应变量，其中方差协方差阵 $\boldsymbol{\Psi}$ 一般未知而需要估计，
+ $\boldsymbol{\varepsilon \sim \mathcal{N}(0,\Lambda)}$ 是误差向量，其由
+ $\varepsilon_{i}$ 堆积而成，一般假设其方差协方差矩阵具有比较简单的形式。
 
 在模型中，线性预测子和非参数函数共同来拟合自变量的固定效应，允许自变量与因变量的关系
 存在多种形式，而随机效应用来拟合观测值之间的相关关系和数据的异质性。
@@ -285,346 +285,7 @@ mapply(function(i, y) {
 显示在表  \@ref(tab:tab-aqi-y-huizong) 中。
 
 
-<!-- ### 年均AQI线性回归模型 -->
 
-<!-- 作为比较的基准，首先建立线性回归模型，结果显示以10%为显著性水平，在入选的11个变量中， -->
-<!-- 废气治理完成投资额、供暖、纬度3个变量对年均AQI呈正向影响，而平均风速、临海对年均AQI呈 -->
-<!-- 负向影响，其余变量不显著，具体结果详见表 \@ref(tab:tab-aqi-y-huizong)。也就是说，在其他变量 -->
-<!-- 保持不变的条件下，废气治理完成投资额越多，年均AQI越大，空气质量越差；平均风速越大， -->
-<!-- 年均AQI越小，空气质量越好；平均来讲，供暖地区比不供暖地区年均AQI大14.9104，而临 -->
-<!-- 海地区比不临海地区年均AQI小16.8303；纬度越高的地方，年均AQI越大，空气质量越差。 -->
-<!-- 但根据一般认知，废气治理完成投资额越多，空气质量应该越好。在这里，本文尝试做出 -->
-<!-- 如下解释，目前废气治理完成投资额不足，当空气污染严重时，才增加更多投资来缓解空气 -->
-<!-- 污染，或者说目前的废气治理完成投资额更多是被动投资，而不是从预防的角度提前投资。 -->
-<!-- 因此，在线性回归模型中，在一定时间内，某些城市的废气污染治理完成投资额虽然较多， -->
-<!-- 正是因为这些城市空气污染较为严重，相对空气污染程度，废气污染治理仍然滞后，完成投 -->
-<!-- 资额不足，不足以扭转城市空气污染的局面。 -->
-
-<!-- ```{r tab-lm-y, include=FALSE, results='markup'} -->
-<!-- rm(list=ls()) -->
-<!-- varlist <- read.csv("../data/var_list.csv") -->
-<!-- dat.sel.y <- read.csv("../results/dat.sel.y.csv") -->
-
-<!-- varinfo <- varlist[match(names(dat.sel.y), as.character(varlist$var_code)), c(1:3,7)] -->
-<!-- varinfo <- varinfo[order(varinfo$var_no), ] -->
-
-<!-- dat.sel.y$city <- factor(dat.sel.y$city) -->
-<!-- dat.sel.y$year <- factor(dat.sel.y$year) -->
-<!-- dat.sel.y$heating <- factor(dat.sel.y$heating) -->
-<!-- dat.sel.y$coast <- factor(dat.sel.y$coast) -->
-
-<!-- varsel <- c("invest", "car", "gas_control", "mean_temp", "rain", "humid", "wind_speed", "pressure", "heating", "coast", "lat") -->
-<!-- varselname <- varlist[match(varsel, as.character(varlist$var_code)), c(1:3,7)] -->
-<!-- varselname <- as.character(varselname[order(varselname$var_no), 2]) -->
-
-<!-- lm.y <- lm(dat.sel.y[, c("AQI", varsel)]) -->
-<!-- lm.y.coef <- summary(lm.y)$coef -->
-<!-- AIC(lm.y)#1089.159 -->
-<!-- BIC(lm.y) -->
-<!-- dimnames(lm.y.coef) <- list(c("截距项", varselname), c("估计值", "标准误", "t值", "P值")) -->
-<!-- #write.csv(lm.y.coef,"../results/lm.y.coef5.csv") -->
-<!-- library("kableExtra") -->
-<!-- knitr::kable(lm.y.coef, row.names =T, align = c("r", "r", "r", "r"), -->
-<!--              caption="年均AQI线性回归模型回归系数表",digits = 4, -->
-<!--              longtable = TRUE, booktabs = TRUE, escape = F) %>% -->
-<!--     kable_styling(latex_options = c("striped", "scale_down", "repeat_header", "hold_position"), -->
-<!--                   ## stripe_index = rep(1:5, 4)+rep(c(0,10,20,30), each = 5), -->
-<!--                   repeat_header_text = "(续)")%>% -->
-<!--     kable_styling(full_width = T) %>% -->
-<!--     column_spec(1, width = c("4.5cm")) -->
-
-<!-- ``` -->
-
-<!-- 上述模型中我们并未考虑空间相关，而之前的莫兰指数的结果显示出年均AQI存在空间自相 -->
-<!-- 关。因此，对残差进行空间自相关检验。在我们的研究中，只涉及四年的数据，时间相对较 -->
-<!-- 短，因此可以不考虑时间相关。残差空间自相关检验结果如表 -->
-<!-- \@ref(tab:tab-lm-y-res-spatial) 所示。由表 \@ref(tab:tab-lm-y-res-spatial) 可知， -->
-<!-- 在5%的显著性水平下，各年的莫兰指数均未通过显著性检验，说明残差不存在空间自相关。 -->
-
-<!-- ```{r tab-lm-y-res-spatial, eval=T, results='markup'} -->
-<!-- library(ape) -->
-<!-- source("../codes/geodistance.R") -->
-<!-- city <- read.csv("../data/city_geo.csv", stringsAsFactors=FALSE) -->
-<!-- df.cities <- city[,c(1, 5, 6)] -->
-<!-- names(df.cities) <- c("name", "lat", "lon") -->
-<!-- city.dist.km <- round(GeoDistanceInMetresMatrix(df.cities) / 1000) -->
-<!-- city.dists.inv <- 1/city.dist.km -->
-<!-- diag(city.dists.inv) <- 0 -->
-
-<!-- moran.g.lm <- tapply(resid(lm.y), as.factor(dat.sel.y$year),  -->
-<!--               function(x) Moran.I(x, city.dists.inv) -->
-<!-- ) -->
-
-<!-- moran.g.lm <- sapply(moran.g.lm, function(x) c(x$observed, x$p.v)) -->
-<!-- dimnames(moran.g.lm)<- list(c("莫兰指数", "P值"), paste0(2014:2017, "年")) -->
-
-<!-- library("kableExtra") -->
-<!-- knitr::kable(moran.g.lm, row.names =T, align = c("r", "r", "r", "r"), -->
-<!--              caption="年均AQI线性回归模型残差空间自相关检验",digits = 4, -->
-<!--              longtable = TRUE, booktabs = TRUE, escape = F) %>% -->
-<!--     kable_styling(latex_options = c("striped", "scale_down", "repeat_header", "hold_position"), -->
-<!--                   ## stripe_index = rep(1:5, 4)+rep(c(0,10,20,30), each = 5), -->
-<!--                   repeat_header_text = "(续)")%>% -->
-<!--     kable_styling(full_width = T) %>% -->
-<!--     column_spec(1, width = c("4.5cm")) -->
-
-<!-- ``` -->
-
-
-<!-- ### 年均AQI线性混合效应模型 -->
-
-<!-- 接下来将城市作为随机效应建立线性混合模型，对空气质量影响因素进行分析。拟合结果如 -->
-<!-- 表 \@ref(tab:tab-aqi-y-huizong) 所示。 -->
-
-<!-- ```{r tab-lme-y, eval=FALSE, include=FALSE, results='markup'} -->
-<!-- rm(list=ls()) -->
-<!-- varlist <- read.csv("../data/var_list.csv") -->
-<!-- dat.sel.y <- read.csv("../results/dat.sel.y.csv") -->
-
-<!-- varinfo <- varlist[match(names(dat.sel.y), as.character(varlist$var_code)), c(1:3,7)] -->
-<!-- varinfo <- varinfo[order(varinfo$var_no), ] -->
-
-<!-- dat.sel.y$city <- factor(dat.sel.y$city) -->
-<!-- dat.sel.y$year <- factor(dat.sel.y$year) -->
-<!-- dat.sel.y$heating <- factor(dat.sel.y$heating) -->
-<!-- dat.sel.y$coast <- factor(dat.sel.y$coast) -->
-
-<!-- varsel <- c("invest", "car", "gas_control", "mean_temp", "rain", "humid", "wind_speed", "pressure", "heating", "coast", "lat") -->
-<!-- varselname <- varlist[match(varsel, as.character(varlist$var_code)), c(1:3,7)] -->
-<!-- varselname <- as.character(varselname[order(varselname$var_no), 2]) -->
-
-<!-- library(mgcv) -->
-<!-- lme.y <- gamm(AQI~invest+car+gas_control+mean_temp+rain+humid+wind_speed+pressure+heating+coast+lat, -->
-<!--               random=list(city=~1), data=dat.sel.y, method = "REML") -->
-<!-- AIC(lme.y$lme)#1064.311 -->
-<!-- lme.y.coef <- summary(lme.y$lme)$tTable[,-3] -->
-
-<!-- dimnames(lme.y.coef) <- list(c("截距项", varselname), c("估计值", "标准误", "t值", "P值")) -->
-<!-- #write.csv(lme.y.coef,"../results/lme.y.coef5.csv") -->
-<!-- library("kableExtra") -->
-<!-- knitr::kable(lme.y.coef, row.names =T, align = c("r", "r", "r", "r"), -->
-<!--              caption="年均AQI线性混合效应模型回归固定效应表",digits = 4, -->
-<!--              longtable = TRUE, booktabs = TRUE, escape = F) %>% -->
-<!--     kable_styling(latex_options = c("striped", "scale_down", "repeat_header", "hold_position"), -->
-<!--                   ## stripe_index = rep(1:5, 4)+rep(c(0,10,20,30), each = 5), -->
-<!--                   repeat_header_text = "(续)")%>% -->
-<!--     kable_styling(full_width = T) %>% -->
-<!--     column_spec(1, width = c("4.5cm")) -->
-
-<!-- ``` -->
-
-<!-- 由表 \@ref(tab:tab-aqi-y-huizong) 可以看出，在10%的显著性水平下，相比普通线形回 -->
-<!-- 归模型，线性混合模型中新增私人汽车拥有量、降水量、平均气压通过显著性检验，但是否 -->
-<!-- 供暖和纬度未通过显著性检验。同样，在线性混合模型中，废气治理完成投资额与年均AQI -->
-<!-- 之间关系的符号仍然是正的，与线性回归模型结论一致，可以做出类似的解释。但私人汽车 -->
-<!-- 拥有量的系数为负，这与实际情况不符，说明对应年均AQI的数据线性混合模型设定不一定 -->
-<!-- 合理。同时，城市作为随机效应，其截距项的标准差为45.5647，说明不同城市其年均AQI存 -->
-<!-- 在一定的差异。且其残差项也不存在空间自相关。 -->
-
-<!-- ### 年均AQI半参数回归模型 -->
-
-<!-- 由之前Lasso变量筛选的结果可知，固定资产投资额、平均气温与年均AQI之间存在非线性相 -->
-<!-- 关关系，其他入选变量与年均AQI之间的关系是线性的，因此有必要建立半参数回归模型。 -->
-<!-- 建立的半参数模型参数部分结果显示在表 \@ref(tab:tab-aqi-y-huizong) 中，非参数项的曲线显示 -->
-<!-- 在图 \@ref(fig:fig-gam-y) 中，非参数项显著性检验结果在表 -->
-<!-- \@ref(tab:tab-gam-y-smooth) 中。 -->
-
-<!-- 由表 \@ref(tab:tab-aqi-y-huizong) 可知，在10%的显著性水平下，参数项废气治理完成投资额、 -->
-<!-- 平均风速、是否供暖、是否临海、纬度对年均AQI存在显著影响。废气治理完成投资额仍然对 -->
-<!-- AQI指数有正向作用。在其他变量保持不变的条件下，平均风速越大，年均AQI越小， -->
-<!-- 空气质量越好；平均来讲，供暖地区比不供暖地区的年均AQI大13.6271，而临海地区比不临 -->
-<!-- 海地区的年均AQI少11.9634；纬度越高的地方年均AQI越大，其空气质量越差。 -->
-
-<!-- ```{r tab-gam-y, include=FALSE, results='markup'} -->
-<!-- rm(list=ls()) -->
-<!-- varlist <- read.csv("../data/var_list.csv") -->
-<!-- dat.sel.y <- read.csv("../results/dat.sel.y.csv") -->
-
-<!-- varinfo <- varlist[match(names(dat.sel.y), as.character(varlist$var_code)), c(1:3,7)] -->
-<!-- varinfo <- varinfo[order(varinfo$var_no), ] -->
-
-<!-- dat.sel.y$city <- factor(dat.sel.y$city) -->
-<!-- dat.sel.y$year <- factor(dat.sel.y$year) -->
-<!-- dat.sel.y$heating <- factor(dat.sel.y$heating) -->
-<!-- dat.sel.y$coast <- factor(dat.sel.y$coast) -->
-
-<!-- varsel <- c("invest", "car", "gas_control", "mean_temp", "rain", "humid", "wind_speed", "pressure", "heating", "coast", "lat") -->
-<!-- varselname <- varlist[match(varsel, as.character(varlist$var_code)), c(1:3,7)] -->
-<!-- varselname <- as.character(varselname[order(varselname$var_no), 2]) -->
-
-<!-- library(mgcv) -->
-<!-- gam.y <- gamm(AQI~te(invest)+te(car)+gas_control+te(mean_temp)+rain+humid+wind_speed+pressure+heating+coast+lat, -->
-<!--              data=dat.sel.y, method = "REML") -->
-<!-- gam.y$aic#1047.365 -->
-<!-- gam.y.coef <- summary(gam.y$lme)$tTable[-(10:12),-3] -->
-
-<!-- dimnames(gam.y.coef) <- list(c("截距项", varselname[-c(1,2,4)]), c("估计值", "标准误", "t值", "P值")) -->
-<!-- #write.csv(gam.y.coef,"../results/gam.y.coef5.csv") -->
-<!-- library("kableExtra") -->
-<!-- knitr::kable(gam.y.coef, row.names =T, align = c("r", "r", "r", "r"), -->
-<!--              caption="年均AQI半参数回归模型参数估计结果",digits = 4, -->
-<!--              longtable = TRUE, booktabs = TRUE, escape = F) %>% -->
-<!--     kable_styling(latex_options = c("striped", "scale_down", "repeat_header", "hold_position"), -->
-<!--                   ## stripe_index = rep(1:5, 4)+rep(c(0,10,20,30), each = 5), -->
-<!--                   repeat_header_text = "(续)")%>% -->
-<!--     kable_styling(full_width = T) %>% -->
-<!--     column_spec(1, width = c("4.5cm")) -->
-
-<!-- ``` -->
-
-<!-- ```{r fig-gam-y, eval=T, fig.height=2.5, fig.width=6.5,out.width="95%", fig.pos="H", fig.cap = "年均AQI半参数回归模型非参数曲线", dev=c("png","cairo_pdf"),dev.args=list(family="Microsoft YaHei UI Light")} -->
-<!-- par(mfrow = c(1,3)) -->
-<!-- par(mar=c(5,4,2,1)) -->
-<!-- plot.gam(gam.y$gam, -->
-<!--          select=1, -->
-<!--          col="blue", -->
-<!--          shade=T, -->
-<!--          shade.col="grey", -->
-<!--          ylab="AQI",xlab = "固定资产投资额" -->
-<!--          ) -->
-<!-- par(mar=c(5,3,2,1)) -->
-<!-- plot.gam(gam.y$gam, -->
-<!--          select=2, -->
-<!--          col="blue", -->
-<!--          shade=T, -->
-<!--          shade.col="grey", -->
-<!--          ylab="",xlab = "汽车拥有量" -->
-<!--          ) -->
-<!-- par(mar=c(5,3,2,1)) -->
-<!-- plot.gam(gam.y$gam, -->
-<!--          select=3, -->
-<!--          col="blue", -->
-<!--          shade=T, -->
-<!--          shade.col="grey", -->
-<!--          ylab="",xlab = "平均气温" -->
-<!--          ) -->
-
-<!-- ``` -->
-
-<!-- ```{r tab-gam-y-smooth, eval=T, results='markup'} -->
-<!-- gam.smooth.tab.y <- summary(gam.y$gam)$s.table[,-2] -->
-
-<!-- dimnames(gam.smooth.tab.y) <- list(varselname[c(1,2,4)], c("经验自由度", "F统计量值", "P值")) -->
-
-<!-- library("kableExtra") -->
-<!-- knitr::kable(gam.smooth.tab.y, row.names =T, align = c("c", "c", "c", "c"), -->
-<!--              caption="年均AQI半参数回归模型非参数项显著性",digits = 4, -->
-<!--              longtable = TRUE, booktabs = TRUE, escape = F) %>% -->
-<!--     kable_styling(latex_options = c("striped", "scale_down", "repeat_header", "hold_position"), -->
-<!--                   ## stripe_index = rep(1:5, 4)+rep(c(0,10,20,30), each = 5), -->
-<!--                   repeat_header_text = "(续)")%>% -->
-<!--     kable_styling(full_width = T) %>% -->
-<!--     column_spec(1, width = c("4.5cm")) -->
-
-<!-- ``` -->
-
-<!-- 图 \@ref(fig:fig-gam-y) 显示了固定资产投资额、汽车拥有量和平均气温三个非参数项与 -->
-<!-- 年均AQI之间的拟合曲线，其中阴影部分表示拟合曲线的95%的置信带。同时由表 -->
-<!-- \@ref(tab:tab-gam-y-smooth) 可知，在10%的显著性水平下，固定资产投资额、平均气温 -->
-<!-- 通过显著性检验，而私人汽车拥有量未通过显著性检验，表明固资产投资额、平均气温对年 -->
-<!-- 均AQI存在非线性影响。由图 \@ref(fig:fig-gam-y) 可以发现，年均AQI随固定资产投资的 -->
-<!-- 增加呈下降-增加-下降的变动趋势，具体来讲，固定资产投资在2000亿元之前年均AQI下降 -->
-<!-- 较快，其在2000-9000亿元之间年均AQI缓慢上升，固定资产投资在9000亿元之后年均AQI有 -->
-<!-- 更快程度的下降。表明固定资产投资额在达到一定程度之后，空气质量会逐渐变好。且整体 -->
-<!-- 来讲，年均AQI随着平均气温的增加而增加，但15℃之前增加较快，之后缓慢增长。 -->
-
-<!-- ### 年均AQI半参数混合效应模型 -->
-
-<!-- 同样以城市作为随机效应，建立半参数混合效应模型，模型参数部分结果显示在表 -->
-<!-- \@ref(tab:tab-aqi-y-huizong) 中，非参数项曲线在图 \@ref(fig:fig-gamm-y) 中， 非参数项显 -->
-<!-- 著性检验结果在表\@ref(tab:tab-gamm-y-smooth) 中。 -->
-
-<!-- ```{r tab-gamm-y, eval=T, results='markup'} -->
-<!-- rm(list=ls()) -->
-<!-- varlist <- read.csv("../data/var_list.csv") -->
-<!-- dat.sel.y <- read.csv("../results/dat.sel.y.csv") -->
-
-<!-- varinfo <- varlist[match(names(dat.sel.y), as.character(varlist$var_code)), c(1:3,7)] -->
-<!-- varinfo <- varinfo[order(varinfo$var_no), ] -->
-
-<!-- dat.sel.y$city <- factor(dat.sel.y$city) -->
-<!-- dat.sel.y$year <- factor(dat.sel.y$year) -->
-<!-- dat.sel.y$heating <- factor(dat.sel.y$heating) -->
-<!-- dat.sel.y$coast <- factor(dat.sel.y$coast) -->
-
-<!-- varsel <- c("invest", "car", "gas_control", "mean_temp", "rain", "humid", "wind_speed", "pressure", "heating", "coast", "lat") -->
-<!-- varselname <- varlist[match(varsel, as.character(varlist$var_code)), c(1:3,7)] -->
-<!-- varselname <- as.character(varselname[order(varselname$var_no), 2]) -->
-
-<!-- library(mgcv) -->
-<!-- gamm.y <- gamm(AQI~te(invest)+te(car)+gas_control+te(mean_temp)+rain+humid+wind_speed+pressure+heating+coast+lat, -->
-<!--                random=list(city=~1), data=dat.sel.y, method = "REML") -->
-
-<!-- gamm.y.coef <- summary(gamm.y$lme)$tTable[-(10:12),-3] -->
-<!-- AIC(gamm.y$lme)#1019.786 -->
-<!-- dimnames(gamm.y.coef) <- list(c("截距项", varselname[-c(1,2,4)]), c("估计值", "标准误", "t值", "P值")) -->
-<!-- #write.csv(gamm.y.coef,"C:/Users/Administrator/Desktop/gamm.y.coef5.csv") -->
-<!-- library("kableExtra") -->
-<!-- knitr::kable(gamm.y.coef, row.names =T, align = c("r", "r", "r", "r"), -->
-<!--              caption="年均AQI可加混合效应模型回归固定效应表",digits = 4, -->
-<!--              longtable = TRUE, booktabs = TRUE, escape = F) %>% -->
-<!--     kable_styling(latex_options = c("striped", "scale_down", "repeat_header", "hold_position"), -->
-<!--                   ## stripe_index = rep(1:5, 4)+rep(c(0,10,20,30), each = 5), -->
-<!--                   repeat_header_text = "(续)")%>% -->
-<!--     kable_styling(full_width = T) %>% -->
-<!--     column_spec(1, width = c("4.5cm")) -->
-
-<!-- ``` -->
-
-<!-- ```{r fig-gamm-y, eval=T, fig.height=2.5, fig.width=6.5,out.width="95%", fig.pos="H", fig.cap = "年均AQI半参数混合模型非参数曲线", dev=c("png","cairo_pdf"),dev.args=list(family="Microsoft YaHei UI Light")} -->
-<!-- par(mfrow = c(1,3)) -->
-<!-- par(mar=c(5,4,2,1)) -->
-<!-- plot.gam(gamm.y$gam, -->
-<!--          select=1, -->
-<!--          col="blue", -->
-<!--          shade=T, -->
-<!--          shade.col="grey", -->
-<!--          ylab="AQI",xlab = "固定资产投资额" -->
-<!--          ) -->
-<!-- par(mar=c(5,3,2,1)) -->
-<!-- plot.gam(gamm.y$gam, -->
-<!--          select=2, -->
-<!--          col="blue", -->
-<!--          shade=T, -->
-<!--          shade.col="grey", -->
-<!--          ylab="",xlab = "汽车拥有量" -->
-<!--          ) -->
-<!-- par(mar=c(5,3,2,1)) -->
-<!-- plot.gam(gamm.y$gam, -->
-<!--          select=3, -->
-<!--          col="blue", -->
-<!--          shade=T, -->
-<!--          shade.col="grey", -->
-<!--          ylab="",xlab = "平均气温" -->
-<!--          ) -->
-<!-- ``` -->
-
-<!-- ```{r tab-gamm-y-smooth, eval=T, results='markup'} -->
-<!-- gamm.smooth.tab.y <- summary(gamm.y$gam)$s.table[,-2] -->
-
-<!-- dimnames(gamm.smooth.tab.y) <- list(varselname[c(1,2,4)], c("经验自由度", "F统计量值", "P值")) -->
-
-<!-- library("kableExtra") -->
-<!-- knitr::kable(gamm.smooth.tab.y, row.names =T, align = c("c", "c", "c", "c"), -->
-<!--              caption="年均AQI半参数混合模型非参数项显著性",digits = 4, -->
-<!--              longtable = TRUE, booktabs = TRUE, escape = F) %>% -->
-<!--     kable_styling(latex_options = c("striped", "scale_down", "repeat_header", "hold_position"), -->
-<!--                   ## stripe_index = rep(1:5, 4)+rep(c(0,10,20,30), each = 5), -->
-<!--                   repeat_header_text = "(续)")%>% -->
-<!--     kable_styling(full_width = T) %>% -->
-<!--     column_spec(1, width = c("4.5cm")) -->
-<!-- ``` -->
-
-<!-- 图 \@ref(fig:fig-gamm-y) 显示了半参数混合效应模型的非参数曲线，其非参数项为固定 -->
-<!-- 资产投资额、汽车拥有量和平均气温，且由表 \@ref(tab:tab-gamm-y-smooth) 的非参数项 -->
-<!-- 显著性检验可知，在10%的显著性水平下，私人汽车拥有量和平均气温通过显著性检验，表 -->
-<!-- 明私人汽车拥有量和平均气温对年均AQI存在非线性影响。且从图 \@ref(fig:fig-gamm-y) -->
-<!-- 可以看出，年均AQI随私人汽车拥有量的增加而下降，而我们预期私人汽车拥有量越多，空 -->
-<!-- 气质量越差，这与我们的预期不一致。同时，平均气温在15℃之前年均AQI随平均气温的增 -->
-<!-- 加而增加，在15℃之后，年均AQI随平均气温的增加而下降，这与半参数回归模型中的结果 -->
-<!-- 不一致。 -->
-
-<!-- ### 年均AQI模型比较与最优模型选择 -->
 
 
 ```{r tab-aqi-y-huizong, eval=T, results='markup'}
@@ -861,330 +522,6 @@ mapply(function(i, y) {
 AQI为因变量采用月度数据建立线性回归模型、线性混合效应模型、半参数回归模型和半参
 数混合效应模型，从这些模型中选择最优模型并做相应分析。具体的模型结果在表 \@ref(tab:tab-aqi-m-huizong) 中。
 
-<!-- ### 月均AQI线性回归模型 -->
-
-<!-- 作为比较基准，我们首先仍然以对数月均AQI为因变量，筛选出的变量为自变量建立线性回归 -->
-<!-- 模型，模型结果如表 \@ref(tab:tab-aqi-m-huizong) 所示。 -->
-
-<!-- ```{r tab-lm-m, eval=T, results='markup'} -->
-<!-- rm(list=ls()) -->
-<!-- varlist <- read.csv("../data/var_list.csv") -->
-<!-- dat.sel.m <- read.csv("../results/dat.sel.m.csv") -->
-<!-- month<-read.csv("../data/monthly.csv") -->
-<!-- dat.sel.m<-merge(dat.sel.m,month,by=c("city","year","month")) -->
-<!-- dat.sel.m<-dat.sel.m[,c(1:28,67)] -->
-<!-- names(dat.sel.m)<-c("city","year","month","AQI","gdp","gdp_rate","invest","pop","green","passenger","con_area", -->
-<!--                     "car","power","ind_SO2","ind_smoke","ind_control","gas_control","mean_temp","low_temp", -->
-<!--                     "high_temp","rain","wind_speed","pressure","heating","coast","long","lat","height","sun") -->
-
-
-<!-- varinfo <- varlist[match(names(dat.sel.m), as.character(varlist$var_code)), c(1:3,7)] -->
-<!-- varinfo <- varinfo[order(varinfo$var_no), ] -->
-
-<!-- dat.sel.m$city <- factor(dat.sel.m$city) -->
-<!-- dat.sel.m$year <- factor(dat.sel.m$year) -->
-<!-- dat.sel.m$month <- factor(dat.sel.m$month) -->
-<!-- dat.sel.m$heating <- factor(dat.sel.m$heating) -->
-<!-- dat.sel.m$coast <- factor(dat.sel.m$coast) -->
-<!-- dat.sel.m$AQI<-log(dat.sel.m$AQI) -->
-
-<!-- varsel <- c("con_area", "car", "gas_control", "mean_temp", "rain", "wind_speed", "pressure", "sun", "heating", "coast", "lat") -->
-<!-- varselname <- varlist[match(varsel, as.character(varlist$var_code)), c(1:3,7)] -->
-<!-- varselname <- as.character(varselname[order(varselname$var_no), 2]) -->
-
-
-<!-- lm.m <- lm(dat.sel.m[, c("AQI", varsel)]) -->
-<!-- lm.m.coef <- summary(lm.m)$coef -->
-<!-- #AIC(lm.m) -->
-<!-- #BIC(lm.m) -->
-<!-- dimnames(lm.m.coef) <- list(c("截距项", varselname), c("估计值", "标准误", "t值", "P值")) -->
-<!-- #write.csv(lm.m.coef,"../results/lm.m.coef5.csv") -->
-<!-- library("kableExtra") -->
-<!-- #knitr::kable(lm.m.coef, row.names =T, align = c("r", "r", "r", "r"), -->
-<!--              #caption="月均AQI线性回归模型回归系数表",digits = 4, -->
-<!--              #longtable = TRUE, booktabs = TRUE, escape = F) %>% -->
-<!--     #kable_styling(latex_options = c("striped", "scale_down", "repeat_header", "hold_position"), -->
-<!--                   ## stripe_index = rep(1:5, 4)+rep(c(0,10,20,30), each = 5), -->
-<!--                   #repeat_header_text = "(续)")%>% -->
-<!--     #kable_styling(full_width = T) %>% -->
-<!--     #column_spec(1, width = c("4.5cm")) -->
-
-<!-- ``` -->
-
-<!-- 由表 \@ref(tab:tab-aqi-m-huizong) 可知，在10%的显著性水平下，房屋建筑施工面积、 -->
-<!-- 私人汽车拥有量、废气治理完成投资额、平均气温、降水量、平均风速、平均气压、供暖、 -->
-<!-- 临海、纬度均通过显著性检验，其系数分别为0.0000、0.0003、0.1849、-0.0088、-0.1006、 -->
-<!-- 0.0012、0.0003、0.0785、-0.1650、0.0111，表明私人汽车拥有量、废气治理完成投资额、 -->
-<!-- 平均风速、平均气压、供暖、纬度对对数月均AQI呈正向影响，而平均气温、降水量、临海 -->
-<!-- 与对数月均AQI呈负向影响。说明在其他条件不变的情况下，私人汽车拥有量越多，空气质 -->
-<!-- 量越差；废气治理完成投资额越多，空气质量越差；平均风速越大的地方空气质量越差；平 -->
-<!-- 均气压越高，空气质量越差；纬度越高的地方空气质量越差。而在其他条件不变的情况下， -->
-<!-- 平均气温越高的地方空气质量越好，降水量越多的地方空气质量越好。且平均来讲，供暖地 -->
-<!-- 区比不供暖地区空气质量差，临海地区比不临海地区空气质量好。 -->
-
-<!-- ### 月均AQI线性混合效应模型 -->
-
-<!-- 之后将城市作为随机效应建立线性混合模型，用月度数据对空气质量影响因素进行相应分析。 -->
-<!-- 模型估计结果如表 \@ref(tab:tab-aqi-m-huizong) 所示。 -->
-
-<!-- ```{r tab-lme-m, eval=T, results='markup'} -->
-<!-- rm(list=ls()) -->
-<!-- varlist <- read.csv("../data/var_list.csv") -->
-<!-- dat.sel.m <- read.csv("../results/dat.sel.m.csv") -->
-<!-- month<-read.csv("../data/monthly.csv") -->
-<!-- dat.sel.m<-merge(dat.sel.m,month,by=c("city","year","month")) -->
-<!-- #head(dat.sel.m) -->
-<!-- dat.sel.m<-dat.sel.m[,c(1:28,67)] -->
-<!-- #head(dat.sel.m) -->
-<!-- names(dat.sel.m)<-c("city","year","month","AQI","gdp","gdp_rate","invest","pop","green","passenger","con_area", -->
-<!--                     "car","power","ind_SO2","ind_smoke","ind_control","gas_control","mean_temp","low_temp", -->
-<!--                     "high_temp","rain","wind_speed","pressure","heating","coast","long","lat","height","sun") -->
-
-
-<!-- varinfo <- varlist[match(names(dat.sel.m), as.character(varlist$var_code)), c(1:3,7)] -->
-<!-- varinfo <- varinfo[order(varinfo$var_no), ] -->
-
-<!-- dat.sel.m$city <- factor(dat.sel.m$city) -->
-<!-- dat.sel.m$year <- factor(dat.sel.m$year) -->
-<!-- dat.sel.m$month <- factor(dat.sel.m$month) -->
-<!-- dat.sel.m$heating <- factor(dat.sel.m$heating) -->
-<!-- dat.sel.m$coast <- factor(dat.sel.m$coast) -->
-<!-- dat.sel.m$AQI<-log(dat.sel.m$AQI) -->
-
-<!-- varsel <- c("con_area", "car", "gas_control", "mean_temp", "rain", "wind_speed", "pressure", "sun", "heating", "coast", "lat") -->
-<!-- varselname <- varlist[match(varsel, as.character(varlist$var_code)), c(1:3,7)] -->
-<!-- varselname <- as.character(varselname[order(varselname$var_no), 2]) -->
-
-<!-- library(mgcv) -->
-<!-- lme.m <- gamm(AQI~con_area+car+gas_control+mean_temp+rain+wind_speed+pressure+sun+heating+coast+lat, -->
-<!--               random=list(city=~1), data=dat.sel.m, method = "REML") -->
-<!-- #AIC(lme.m$lme) -->
-<!-- #BIC(lme.m$lme) -->
-<!-- lme.m.coef <- summary(lme.m$lme)$tTable[,-3] -->
-
-<!-- dimnames(lme.m.coef) <- list(c("截距项", varselname), c("估计值", "标准误", "t值", "P值")) -->
-<!-- #write.csv(lme.m.coef,"../results/lme.m.coef5.csv") -->
-<!-- library("kableExtra") -->
-<!-- knitr::kable(lme.m.coef, row.names =T, align = c("r", "r", "r", "r"), -->
-<!--              caption="月均AQI线性混合效应模型回归固定效应表",digits = 4, -->
-<!--              longtable = TRUE, booktabs = TRUE, escape = F) %>% -->
-<!--     kable_styling(latex_options = c("striped", "scale_down", "repeat_header", "hold_position"), -->
-<!--                   # stripe_index = rep(1:5, 4)+rep(c(0,10,20,30), each = 5), -->
-<!--                   repeat_header_text = "(续)")%>% -->
-<!--     kable_styling(full_width = T) %>% -->
-<!--     column_spec(1, width = c("4.5cm")) -->
-
-<!-- ``` -->
-
-<!-- 由表 \@ref(tab:tab-aqi-m-huizong) 可知，在10%的显著性水平下，平均风速、平均气压、纬度均对对数月均AQI呈正向影响，私人汽车拥有量、 -->
-<!-- 平均气温、降水量、临海对对数月均AQI呈负向影响。说明在其他变量保持不变 -->
-<!-- 的条件下，平均风速越大，月均AQI越大，空气质量越差；平均气压越大，空气 -->
-<!-- 质量越差；纬度越高的地方空气质量越差；而私人汽车拥有 -->
-<!-- 量越多，空气质量越好；平均气温越高，空气质量越好；降水量越多，空气质量越好； -->
-<!-- 且平均来讲，临海地区比不临海地区空气质量好。通常认为私人汽车拥有量越多，空气质量越差。 -->
-<!-- 而此时，私人汽车拥有量与预期的符号不一致。 -->
-
-<!-- ### 月均AQI半参数回归模型 -->
-
-<!-- 由之前变量筛选的结果可知，纬度与对数月均AQI之间存在非线性相关关系。进一步建立半 -->
-<!-- 参数回归模型，模型参数部分估计结果如表 \@ref(tab:tab-aqi-m-huizong) 所示，非参数项光滑曲 -->
-<!-- 线在图 \@ref(fig:fig-gam-m) 中，非参数项的显著性检验由表 -->
-<!-- \@ref(tab:tab-gam-m-smooth) 给出。 -->
-
-<!-- ```{r tab-gam-m, eval=T, results='markup'} -->
-<!-- rm(list=ls()) -->
-<!-- varlist <- read.csv("../data/var_list.csv") -->
-<!-- dat.sel.m <- read.csv("../results/dat.sel.m.csv") -->
-<!-- month<-read.csv("../data/monthly.csv") -->
-<!-- dat.sel.m<-merge(dat.sel.m,month,by=c("city","year","month")) -->
-<!-- #head(dat.sel.m) -->
-<!-- dat.sel.m<-dat.sel.m[,c(1:28,67)] -->
-<!-- #head(dat.sel.m) -->
-<!-- names(dat.sel.m)<-c("city","year","month","AQI","gdp","gdp_rate","invest","pop","green","passenger","con_area", -->
-<!--                     "car","power","ind_SO2","ind_smoke","ind_control","gas_control","mean_temp","low_temp", -->
-<!--                     "high_temp","rain","wind_speed","pressure","heating","coast","long","lat","height","sun") -->
-
-
-<!-- varinfo <- varlist[match(names(dat.sel.m), as.character(varlist$var_code)), c(1:3,7)] -->
-<!-- varinfo <- varinfo[order(varinfo$var_no), ] -->
-
-<!-- dat.sel.m$city <- factor(dat.sel.m$city) -->
-<!-- dat.sel.m$year <- factor(dat.sel.m$year) -->
-<!-- dat.sel.m$month <- factor(dat.sel.m$month) -->
-<!-- dat.sel.m$heating <- factor(dat.sel.m$heating) -->
-<!-- dat.sel.m$coast <- factor(dat.sel.m$coast) -->
-<!-- dat.sel.m$AQI<-log(dat.sel.m$AQI) -->
-
-<!-- varsel <- c("con_area", "car", "gas_control", "mean_temp", "rain", "wind_speed", "pressure", "sun", "heating", "coast", "lat") -->
-<!-- varselname <- varlist[match(varsel, as.character(varlist$var_code)), c(1:3,7)] -->
-<!-- varselname <- as.character(varselname[order(varselname$var_no), 2]) -->
-
-<!-- library(mgcv) -->
-<!-- gam.m <- gamm(AQI~con_area+car+gas_control+mean_temp+rain+wind_speed+pressure+sun+heating+coast+te(lat), -->
-<!--              data=dat.sel.m, method = "REML") -->
-<!-- gam.m.coef <- summary(gam.m$lme)$tTable[-12,-3] -->
-
-<!-- dimnames(gam.m.coef) <- list(c("截距项", varselname[-11]), c("估计值", "标准误", "t值", "P值")) -->
-<!-- #write.csv(gam.m.coef,"C:/Users/Administrator/Desktop/gam.m.coef5.csv") -->
-<!-- library("kableExtra") -->
-<!-- knitr::kable(gam.m.coef, row.names =T, align = c("l", "c", "c", "c"), -->
-<!--              caption="月均AQI半参数回归模型参数估计结果",digits = 4, -->
-<!--              longtable = TRUE, booktabs = TRUE, escape = F) %>% -->
-<!--     kable_styling(latex_options = c("striped", "scale_down", "repeat_header", "hold_position"), -->
-<!--                   #stripe_index = rep(1:5, 4)+rep(c(0,10,20,30), each = 5), -->
-<!--                   repeat_header_text = "(续)")%>% -->
-<!--     kable_styling(full_width = T) %>% -->
-<!--     column_spec(1, width = c("4.5cm")) -->
-
-<!-- ``` -->
-
-<!-- 由表 \@ref(tab:tab-aqi-m-huizong) 可知，在10%的显著性水平下，房屋建筑施工面积、私人汽车 -->
-<!-- 拥有量、废气治理完成投资额、平均气温、降水量、平均风速、平均气压、是否供暖、是否 -->
-<!-- 临海对年均AQI存在显著影响，其系数分别为0.0000、0.0003、 -->
-<!-- 0.0951、-0.0098、-0.0696、0.0014、0.0003、0.0414、-0.1682。表明在其他变量保持不 -->
-<!-- 变的条件下，私人汽车拥有量越多，空气质量越差；废气污染治理完成投资额越多，空气质 -->
-<!-- 量越差；平均气压越大，空气质量越差；而平均气温越高，空气质量越好；降水量越多，空 -->
-<!-- 气质量越好；平均风速越大，空气质量越差；平均来讲，供暖地区比不供暖地区的空气质量 -->
-<!-- 差，而临海地区比不临海地区的空气质量好。且图 \@ref(fig:fig-gam-m) 中显示了纬度的 -->
-<!-- 拟合曲线，阴影部分表示95%的置信带。由图 \@ref(fig:fig-gam-m) 可以看出，纬度在37 -->
-<!-- 之前，对数月均AQI随纬度的增加而增加，在北纬37度之后，对数月均AQI随纬度的增加而下 -->
-<!-- 降。且由表 \@ref(tab:tab-gam-m-smooth) 可知，该非参数项通过显著性检验。 -->
-
-<!-- ```{r fig-gam-m, eval=T, fig.height=3.5, fig.width=5,out.width="0.75\\textwidth", fig.align='center', fig.pos="H", fig.cap = "月均AQI半参数回归模型非参数曲线", dev=c("png","cairo_pdf"),dev.args=list(family="Microsoft YaHei UI Light")} -->
-<!-- par(mfrow = c(1,1)) -->
-<!-- par(mar=c(5,4,2,1)) -->
-<!-- par(cex.axis = 0.9, cex.lab = 0.9) -->
-<!-- plot.gam(gam.m$gam, -->
-<!--          select=1, -->
-<!--          col="blue", -->
-<!--          shade=T, -->
-<!--          shade.col="grey", -->
-<!--          ylab="log(AQI)",xlab = "纬度" -->
-<!--          ) -->
-<!-- ``` -->
-
-<!-- ```{r tab-gam-m-smooth, eval=T, results='markup'} -->
-<!-- gam.smooth.tab.m <- t(as.matrix(summary(gam.m$gam)$s.table[,-2])) -->
-
-<!-- colnames(gam.smooth.tab.m) <-  c("经验自由度", "F统计量值", "P值") -->
-<!-- rownames(gam.smooth.tab.m)<-varselname[11] -->
-
-<!-- library("kableExtra") -->
-<!-- knitr::kable(gam.smooth.tab.m, row.names =T, align = c("c", "c", "c", "c"), -->
-<!--              caption="月均AQI半参数回归模型非参数项显著性",digits = 4, -->
-<!--              longtable = TRUE, booktabs = TRUE, escape = F) %>% -->
-<!--     kable_styling(latex_options = c("striped", "scale_down", "repeat_header", "hold_position"), -->
-<!--                   ## stripe_index = rep(1:5, 4)+rep(c(0,10,20,30), each = 5), -->
-<!--                   repeat_header_text = "(续)")%>% -->
-<!--     kable_styling(full_width = T) %>% -->
-<!--     column_spec(1, width = c("4.5cm")) -->
-<!-- ``` -->
-
-<!-- ### 月均AQI半参数混合效应模型 -->
-
-<!-- 以城市作为随机效应进一步建立半参数混合效应模型，模型参数部分估计结果如表 -->
-<!-- \@ref(tab:tab-aqi-m-huizong) 所示，非参数项光滑曲线在图 \@ref(fig:fig-gamm-m) 中，非参 -->
-<!-- 数项的显著性检验由表\@ref(tab:tab-gamm-m-smooth) 给出。 -->
-
-<!-- ```{r tab-gamm-m, eval=T, results='markup'} -->
-<!-- rm(list=ls()) -->
-<!-- varlist <- read.csv("../data/var_list.csv") -->
-<!-- dat.sel.m <- read.csv("../results/dat.sel.m.csv") -->
-<!-- month<-read.csv("../data/monthly.csv") -->
-<!-- dat.sel.m<-merge(dat.sel.m,month,by=c("city","year","month")) -->
-<!-- #head(dat.sel.m) -->
-<!-- dat.sel.m<-dat.sel.m[,c(1:28,67)] -->
-<!-- #head(dat.sel.m) -->
-<!-- names(dat.sel.m)<-c("city","year","month","AQI","gdp","gdp_rate","invest","pop","green","passenger","con_area", -->
-<!--                     "car","power","ind_SO2","ind_smoke","ind_control","gas_control","mean_temp","low_temp", -->
-<!--                     "high_temp","rain","wind_speed","pressure","heating","coast","long","lat","height","sun") -->
-
-
-<!-- varinfo <- varlist[match(names(dat.sel.m), as.character(varlist$var_code)), c(1:3,7)] -->
-<!-- varinfo <- varinfo[order(varinfo$var_no), ] -->
-
-<!-- dat.sel.m$city <- factor(dat.sel.m$city) -->
-<!-- dat.sel.m$year <- factor(dat.sel.m$year) -->
-<!-- dat.sel.m$month <- factor(dat.sel.m$month) -->
-<!-- dat.sel.m$heating <- factor(dat.sel.m$heating) -->
-<!-- dat.sel.m$coast <- factor(dat.sel.m$coast) -->
-<!-- dat.sel.m$AQI<-log(dat.sel.m$AQI) -->
-
-<!-- varsel <- c("con_area", "car", "gas_control", "mean_temp", "rain", "wind_speed", "pressure", "sun", "heating", "coast", "lat") -->
-<!-- varselname <- varlist[match(varsel, as.character(varlist$var_code)), c(1:3,7)] -->
-<!-- varselname <- as.character(varselname[order(varselname$var_no), 2]) -->
-
-<!-- library(mgcv) -->
-<!-- gamm.m <- gamm(AQI~con_area+car+gas_control+mean_temp+rain+wind_speed+pressure+sun+heating+coast+te(lat), -->
-<!--                random=list(city=~1), data=dat.sel.m, method = "REML") -->
-<!-- #AIC(gamm.m$lme) -->
-<!-- #BIC(gamm.m$lme) -->
-<!-- gamm.m.coef <- summary(gamm.m$lme)$tTable[-12,-3] -->
-
-<!-- dimnames(gamm.m.coef) <- list(c("截距项", varselname[-11]), c("估计值", "标准误", "t值", "P值")) -->
-<!-- #write.csv(gamm.m.coef,"C:/Users/Administrator/Desktop/gamm.m.coef5.csv") -->
-<!-- library("kableExtra") -->
-<!-- #knitr::kable(gamm.m.coef, row.names =T, align = c("r", "r", "r", "r"), -->
-<!--              #caption="月均AQI可加混合效应模型回归固定效应表",digits = 4, -->
-<!--              #longtable = TRUE, booktabs = TRUE, escape = F) %>% -->
-<!--     #kable_styling(latex_options = c("striped", "scale_down", "repeat_header", "hold_position"), -->
-<!--                   ## stripe_index = rep(1:5, 4)+rep(c(0,10,20,30), each = 5), -->
-<!--                   #repeat_header_text = "(续)")%>% -->
-<!--     #kable_styling(full_width = T) %>% -->
-<!--     #column_spec(1, width = c("4.5cm")) -->
-
-<!-- ``` -->
-
-<!-- ```{r fig-gamm-m, eval=T, fig.height=3.5, fig.width=5,out.width="0.75\\textwidth", fig.align='center', fig.pos="H", fig.cap = "月均AQI半参数混合模型非参数曲线", dev=c("png","cairo_pdf"),dev.args=list(family="Microsoft YaHei UI Light")} -->
-<!-- par(mfrow = c(1,1)) -->
-<!-- par(mar=c(5,4,2,1)) -->
-<!-- par(cex.axis = 0.9, cex.lab = 0.9) -->
-
-
-<!-- plot.gam(gamm.m$gam, -->
-<!--          select=1, -->
-<!--          col="blue", -->
-<!--          shade=T, -->
-<!--          shade.col="grey", -->
-<!--          ylab="log(AQI)",xlab = "纬度" -->
-<!--          ) -->
-
-<!-- ``` -->
-
-<!-- ```{r tab-gamm-m-smooth, eval=T, results='markup'} -->
-<!-- gamm.smooth.tab.m <- t(as.matrix(summary(gamm.m$gam)$s.table[,-2])) -->
-
-<!-- #dimnames(gamm.smooth.tab.m) <- list( varselname[11],c("经验自由度", "F统计量值", "P值")) -->
-
-<!-- colnames(gamm.smooth.tab.m)<-c("经验自由度", "F统计量值", "P值") -->
-<!-- rownames(gamm.smooth.tab.m)<-varselname[11] -->
-
-
-<!-- library("kableExtra") -->
-<!-- knitr::kable(gamm.smooth.tab.m, row.names =T, align = c("c", "c", "c", "c"), -->
-<!--              caption="月均AQI可加混合模型非参数项显著性",digits = 4, -->
-<!--              longtable = TRUE, booktabs = TRUE, escape = F) %>% -->
-<!--     kable_styling(latex_options = c("striped", "scale_down", "repeat_header", "hold_position"), -->
-<!--                   ## stripe_index = rep(1:5, 4)+rep(c(0,10,20,30), each = 5), -->
-<!--                   repeat_header_text = "(续)")%>% -->
-<!--     kable_styling(full_width = T) %>% -->
-<!--     column_spec(1, width = c("4.5cm")) -->
-
-<!-- ``` -->
-
-<!-- 由表 \@ref(tab:tab-aqi-m-huizong) 可知，在10%的显著性水平下，房屋建筑施工面积、私人汽车 -->
-<!-- 拥有量、废气治理完成投资额、平均气温、降水量、平均风速、平均气压、是否临海均通过显著性检验，且其系数分别为0.0000、-0.0005、 -->
-<!-- 0.0384、-0.0134、-0.0543、-0.0020、0.0005、-0.1789。表明在其他条 -->
-<!-- 件不变的前提下，废气治理完成投资额越多，空气质量越差；平均风速越大，空气质量越差； -->
-<!-- 平均气压越大，空气质量越差；而私人汽车拥有量越多，空气质量越好；平均气温越高，空 -->
-<!-- 气质量越好；降水量越多，空气质量越好；平均来讲，供暖 -->
-<!-- 地区比不供暖地区的空气质量差，临海地区比不临海地区空气质量好。同样，私人汽车拥有 -->
-<!-- 量的符号与我们预期的符号相反。图 \@ref(fig:fig-gamm-m) 显示了半参数混合效应模型 -->
-<!-- 的非参数曲线，其非参数项为纬度，该图表明纬度在37之前，对数月均AQI随纬度的增加而 -->
-<!-- 增加，纬度在37之后，对数月均AQI随纬度的增加而减小。且由表 -->
-<!-- \@ref(tab:tab-gamm-m-smooth) 可知，在10%的显著性水平下，该非参数项通过显著性检验。 -->
-
-<!-- ### 月均AQI模型比较与最优模型选择 -->
 
 ```{r tab-aqi-m-huizong, eval=T, results='markup'}
 monthly=read.csv("../results/monthly-aqi.csv")
